--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -85,3 +85,34 @@
 .partners>img{
     width: 2.5rem;
 }
+
+
+@media screen and (max-width:768px){
+    .Reasons{
+        flex-direction: column;
+    }
+
+    .left-r{
+        grid-auto-rows: auto;
+        overflow: hidden;
+    }
+
+    .left-r>nth:nth-child(1){
+        width: 7rem;
+        height: 17rem;
+    }
+
+    .left-r>nth:nth-child(2){
+        width: 15rem;
+        height: 10rem;
+    }
+
+    .left-r>nth:nth-child(3){
+        width: 7rem;
+    }
+
+    .left-r>nth:nth-child(4){
+        width: 7rem;
+        height: 6rem;
+    }
+}
